--- a/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
+++ b/GataryLabs.SwfBox.Views/Styles/MainStyles.xaml
@@ -10,12 +10,13 @@
     
     <!-- Colors -->
 
-    <SolidColorBrush x:Key="Theme.Background.MainRegion" Color="#E0E0E0" />
+    <SolidColorBrush x:Key="Theme.Background.MainRegion" Color="#343434" />
     <SolidColorBrush x:Key="Theme.Background.MainRegion.Card" Color="#C9C9C9" />
     <SolidColorBrush x:Key="Theme.BorderBrush.MainRegion.Card" Color="#FFFFFF" />
     <SolidColorBrush x:Key="Theme.Background.Button" Color="#999999" />
     <SolidColorBrush x:Key="Theme.Foreground.Button" Color="#FFFFFF" />
     <SolidColorBrush x:Key="Theme.BorderBrush.Button" Color="#999999" />
+    <SolidColorBrush x:Key="Theme.Foreground.MainRegion.Header" Color="#FFFFFF" />
     
     <SolidColorBrush x:Key="Theme.Background.MenuBar" Color="#9E9E9E" />
     <SolidColorBrush x:Key="Theme.Foreground.MenuBar.Headline" Color="#E0E0E0" />
@@ -40,8 +41,18 @@
     <Thickness x:Key="Theme.Thickness.Big">20</Thickness>
     <Thickness x:Key="Theme.Thickness.Small">10</Thickness>
     <system:Double x:Key="Theme.Spacing.Small">10</system:Double>
+    <system:Double x:Key="Theme.Spacing.Tiny">4</system:Double>
     <GridLength x:Key="Theme.Spacing.Headline.Medium">40</GridLength>
     
+    <!-- Effects -->
+
+    <DropShadowEffect x:Key="Theme.DropShadowEffect.TopText"
+                      BlurRadius="15"
+                      ShadowDepth="3"
+                      Direction="270"
+                      Color="Black"
+                      Opacity=".75"/>
+
     <!-- Main panel -->
 
     <Style x:Key="Main.ActionButton.Basic" TargetType="Button">
@@ -58,12 +69,23 @@
         <Setter Property="Height" Value="36"/>
     </Style>
 
+    <Style x:Key="Main.ActionButton.BigSquared" TargetType="Button" BasedOn="{StaticResource Main.ActionButton.Basic}">
+        <Setter Property="Width" Value="36"/>
+        <Setter Property="Height" Value="36"/>
+    </Style>
+
     <Style x:Key="Main.ActionButton.Small" TargetType="Button" BasedOn="{StaticResource Main.ActionButton.Basic}">
         <Setter Property="FontWeight" Value="Regular"/>
         <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Button.Small}"/>
         <Setter Property="MinWidth" Value="100"/>
     </Style>
 
+    <Style x:Key="Main.Headline.Big.Top" TargetType="Label">
+        <Setter Property="Foreground" Value="{StaticResource Theme.Foreground.MainRegion.Header}"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Headline.Huge}"/>
+    </Style>
+    
     <Style x:Key="Main.Headline.Big" TargetType="Label">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Headline.Huge}"/>
@@ -74,6 +96,12 @@
         <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Headline.Medium}"/>
     </Style>
     
+    <Style x:Key="Main.Paragraph.Top" TargetType="Label">
+        <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Paragraph}"/>
+        <Setter Property="Foreground" Value="{StaticResource Theme.Foreground.MainRegion.Header}"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+    </Style>
+   
     <Style x:Key="Main.Paragraph" TargetType="Label">
         <Setter Property="FontSize" Value="{StaticResource Theme.FontSize.Paragraph}"/>
     </Style>
@@ -144,6 +172,9 @@
     
     <Style x:Key="Main.MainRegion.Border" TargetType="Border">
         <Setter Property="Padding" Value="{StaticResource Theme.Thickness.Big}"/>
+    </Style>
+
+    <Style x:Key="Main.MainRegion.Border.Background" TargetType="Grid">
         <Setter Property="Background" Value="{StaticResource Theme.Background.MainRegion}"/>
     </Style>
 
